Fix button contrast on hover

--- a/src/css/elements/button.css
+++ b/src/css/elements/button.css
@@ -11,6 +11,7 @@
 
 .button:not(.button--disabled):hover {
   background: var(--color-primary-B400);
+  border-color: var(--color-neutrals);
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   color: var(--color-neutrals);
 }
